FORGE-638 establish unit test coverage baseline